--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Derivatives</title>
+    <title>Derivative Calculator</title>
     <meta name="description" content="Derivative Calculator">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Joshua Ji">
@@ -15,7 +15,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png">
 </head>
 
 <body>
